# tokenalyzer

./: .gitignore  README.md  index.html  pyproject.toml
pages/: index.html
src/tokenalyzer/: cli.py  core.py
tests/: test_core.py
