[project]
name = "tokenalyzer"
version = "0.1.0"
description = "Analyze AI coding tool token usage and costs from session logs"
requires-python = ">=3.14"
dependencies = [
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[project.scripts]
tokenalyzer = "tokenalyzer.cli:main"

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"
