[project]
name = "tokenalyzer"
version = "0.1.0"
description = "Analyze AI coding tool token usage and costs from session logs"
authors = [{ name = "shyh26", email = "shyh26@users.noreply.github.com" }]
requires-python = ">=3.10"
keywords = ["claude-code", "token", "cost", "ai", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[project.scripts]
tokenalyzer = "tokenalyzer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenalyzer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://shyh26.github.io/tokenalyzer"
Repository = "https://github.com/shyh26/tokenalyzer"
